--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Codecypher
+title: Cypherkaka
 email: chirag.visavadia@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Welcome to my blog 'Codecypher', this blog  contains detailed information and tutorials regarding technologies and framework like JDK8, Spring, BigData, Apache Hadoop, Apache Spark, NoSql and many others.
+  Welcome to my blog 'Cypherkaka', this blog contains information and tutorials regarding technologies and frameworks like JDK8, Spring, Hibernate, BigData, Apache Hadoop, Apache Spark, NoSQL and many others.
+
+  Basically, I have created this blog to explore new frameworks and remember all technical details that I have worked on or going to work with as my learning curve.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: chiragvisavadia
